<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/about_me">





        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Login">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_unlock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_enableMergePathsForKitKatAndAbove="true"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:lottie_loop="false"
                app:lottie_fileName="unlock.json"
                app:lottie_autoPlay="false"
                android:elevation="20dp"/>


            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:background="@android:color/black"
                android:text="@string/authentication"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="30sp"
                app:fontFamily="@font/aclonica"
                android:elevation="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="24sp"
                android:elevation="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="24sp"
                android:elevation="20dp"/>

            <Button
                android:id="@+id/Login_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:background="@drawable/ripple_effect_2"
                android:text="@string/login"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="24sp"
                android:elevation="20dp"/>

            <TextView
                android:id="@+id/New_Registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_Button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/new_here_register_here"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:elevation="20dp"/>

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/New_Registration"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_password"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:elevation="20dp"/>

            <ProgressBar
                android:id="@+id/progress_Bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reset_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:visibility="invisible" />

        </RelativeLayout>


</ScrollView>